<resources>
    <string name="app_name"> Inventory               </string>
    <string name="Header">   Echostar Inventory Tool </string>

    <string name="login">       stas.savinov    </string>
    <string name="login_hint">  Echostar corporate account</string>
    <string name="password">    Password        </string>
    <string name="login_btn">   Sign In         </string>
    <string name="remember_me"> Remember me?    </string>

    <string name="scanner_activity_zxing">Echostar Inventory Scanner</string>
    <string name="scanner_activity_zbar">ZBar Scanner</string>

    <string name="toggle_flash">    Flash           </string>
    <string name="flash_on">        Flash [ON]      </string>
    <string name="flash_off">       Flash [OFF]     </string>
    <string name="auto_focus_on">   Auto Focus [ON] </string>
    <string name="auto_focus_off">  Auto Focus [OFF]</string>
    <string name="formats">         Formats         </string>
    <string name="choose_formats">  Choose Formats  </string>
    <string name="select_camera">   Select a Camera </string>

    <!-- Search Activity -->
    <string name="global_category">Category</string>
    <string name="sub_category">Sub-category</string>
    <string name="field_to_search">Item Field</string>
    <string name="search_field">Type searched info:</string>
    <string name="search_here">Search</string>

    <string name="item_found">Item description</string>

    <string name="instructions">Inventory tool application provide you opportunity to check all
        equipment on your site. By means of this tool you can perform manual search using "Search"
        button. Then use Category field and Item field to make search more efficient.
        Another variant is to use Barcode scanner. In case you have device and you want to check
        information on it, use Scan button and using camera detect barcode. In case device present
        in database, you will get information on it. Otherwise popup will notify you that search
        does not detect such device in database.
        Admin user will have opportunity to add and modify all available information for any device.
        Tips: In case your device doe not have image, please create photo for it.
    </string>

    <string name="username_error">username_error</string>
    <string name="password_error">password_error</string>
    <string name="login_failed">login_failed</string>

    <!-- ############################# Upper strings are checked as valid ###################### -->

    <string name="title_activity_scan"> ScanActivity    </string>
    <string name="dummy_button">        Dummy Button    </string>
    <string name="dummy_content">       DUMMY\nCONTENT  </string>

    <string name="demo_app_name">ZXScanDemoApp</string>
    <string name="action_settings">Settings</string>
    <string name="test_in_fragment">Scan In Standalone Activity</string>
    <string name="test_in_view">Scan In Embedded View</string>
    <string name="test_in_view_front">Scan In Embedded View Using Front Camera</string>
    <string name="close_scanner">Stop</string>
    <string name="please_wait">Starting Camera...</string>
    <string name="camera_error">Camera initialization error: %s</string>
    <string name="no_front_camera_found">No front facing camera found, using default one instead...</string>
    <string name="title_activity_scan_window">ScanWindowActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it. </string>
    <string name="title_activity_simple_scanner">SimpleScannerActivity</string>
    <string name="title_activity_base_scanner">BaseScannerActivity</string>


    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>


    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
</resources>
