<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inventory.echostar.inventory.search.SearchActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:text="@string/global_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/primary_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:id="@+id/sprGlobalCategory"
                android:spinnerMode="dropdown"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sprGlobalCategory"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView2"
                android:textColor="@color/primary_text"
                android:text="@string/sub_category" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/sprItemCategory" />

            <TextView
                android:text="@string/field_to_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sprItemCategory"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView3"
                android:textColor="@color/primary_text" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="29dp"
                android:id="@+id/sprItemField" />

            <TextView
                android:text="@string/search_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sprItemField"
                android:layout_alignParentStart="true"
                android:layout_marginTop="29dp"
                android:id="@+id/textView4"
                android:textColor="@color/primary_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_marginTop="17dp"
                android:id="@+id/edtxtSearchField"
                android:layout_alignParentEnd="true"
                android:hint="@string/search_here" />

            <Button
                android:text="@android:string/search_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:id="@+id/btnSearchInDatabase"
                android:layout_below="@+id/edtxtSearchField"
                android:layout_centerHorizontal="true"
                android:onClick="onClickSearchInDatabase"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
